# mesh-net-esp32-rpi5

./: .gitignore  .mcp.json  CLAUDE.md  PROJECT-SPEC.md  logs
.claude/: settings.local.json
Docs/: api.md  architecture.md  database.md  deployment.md  field-tests.md  protocol.md
firmware/esp32-terminal/: logs  platformio.ini
firmware/esp32-terminal/include/: cert.h
firmware/esp32-terminal/lib/mesh_packet/: MeshPacket.cpp  MeshPacket.h
firmware/esp32-terminal/scripts/: gen_cert.sh  patch_esp32_https_server.py
firmware/esp32-terminal/src/: main.cpp
proto/: messages.proto
scripts/db_init/: init.sh  init.sql
scripts/import_tiles/: CLAUDE.md  download_tiles.py
scripts/systemd/: install.sh  mesh-gigachat-agent.service  mesh-lora-station.service  mesh-rescue-api.service
services/gigachat-agent/: CLAUDE.md  install.sh  requirements.txt
services/gigachat-agent/gigachat_agent/: __init__.py  __main__.py  agent.py  app.py  config.py  prompts.py  tools.py
services/lora-station/: CLAUDE.md  install.sh  mesh_packet.py  requirements.txt
services/lora-station/lora_station/: __init__.py  __main__.py  db.py  dispatcher.py  mesh.py  packet.py  sx1262.py
services/relay-node/: CLAUDE.md
services/rescue-api/: CLAUDE.md  install.sh  requirements.txt
services/rescue-api/rescue_api/: __init__.py  __main__.py  app.py  db.py  models.py  ws.py
tests/field/lora-sniffer/: CMakeLists.txt  README.md  main.cpp
web/info-portal/: CLAUDE.md
web/rescue-dashboard/: CLAUDE.md  app.js  index.html  install.sh  style.css
web/tourist-web/: CLAUDE.md
